--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
